AWS/backend/s2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-service-2
  labels:
    app: ces-2-app
spec:
  selector:
    matchLabels:
      app: ces-2-app
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ces-2-app
    spec:
      containers:
      - name: currency-exchange-service-2
        image: 152512582646.dkr.ecr.us-east-2.amazonaws.com/currency-exchange-service-2:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
